Fixed Players list overflowing on Managenemt tab for those crazy people with 8 or more players

--- a/styles/init.css
+++ b/styles/init.css
@@ -343,25 +343,35 @@
       height: 100%; }
       .forien-quest-preview .quest-body .management.active {
         display: grid; }
-      .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal {
+      .forien-quest-preview .quest-body .management .part.personal-quest {
         display: grid;
-        grid-template-columns: auto 1fr;
-        grid-template-rows: auto auto;
-        gap: 1px 1px;
-        grid-template-areas: ". ." "desc desc"; }
-        .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal label {
-          display: flex;
-          align-items: center; }
-        .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal .personal-quest-description {
-          grid-area: desc; }
-      .forien-quest-preview .quest-body .management .part.personal-quest .users {
-        display: grid;
-        grid-auto-rows: auto;
-        grid-template-columns: max-content auto;
-        gap: 1px 1px;
-        padding: 8px; }
-        .forien-quest-preview .quest-body .management .part.personal-quest .users.disabled {
-          color: #666666; }
+        grid-auto-rows: auto minmax(0, 1fr);
+        grid-template-columns: minmax(0, 1fr);
+        gap: 1px 1px; }
+        .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal {
+          display: grid;
+          grid-template-columns: auto 1fr;
+          grid-template-rows: auto auto;
+          gap: 1px 1px;
+          grid-template-areas: ". ." "desc desc"; }
+          .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal label {
+            display: flex;
+            align-items: center; }
+          .forien-quest-preview .quest-body .management .part.personal-quest .quest-is-personal .personal-quest-description {
+            grid-area: desc; }
+        .forien-quest-preview .quest-body .management .part.personal-quest .user-columns {
+          padding: 8px;
+          columns: 2; }
+          .forien-quest-preview .quest-body .management .part.personal-quest .user-columns .users {
+            height: 100%;
+            break-inside: avoid-column; }
+            .forien-quest-preview .quest-body .management .part.personal-quest .user-columns .users .user {
+              break-inside: avoid-column;
+              display: flex; }
+              .forien-quest-preview .quest-body .management .part.personal-quest .user-columns .users .user.disabled {
+                color: #666666; }
+              .forien-quest-preview .quest-body .management .part.personal-quest .user-columns .users .user label {
+                align-self: center; }
       .forien-quest-preview .quest-body .management .part.quest-splash {
         display: grid;
         grid-template-columns: minmax(0, 1fr);
